--- a/style.css
+++ b/style.css
@@ -296,7 +296,7 @@
         }
         
         .payment-title {
-            font-size: 1.2rem;
+            font-size: 12px;
             color: #e74c3c;
             margin-bottom: 10px;
             font-weight: 600;
@@ -489,4 +489,5 @@
             color: #7f8c8d;
             margin-top: 5px;
             padding-left: 10px;
+
         }
